Improve new API for locations